first clean push for online use

--- a/frontend/swipebyte/index.html
+++ b/frontend/swipebyte/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/20250812_1258_Swipe Byte Logo_simple_compose_01k2fkf52he289kcvm61at2ysg.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SwipeByte</title>
         <link
